zokrates_cli/examples/compile_errors/variable_sized_array.zok
def main(u32 N) {
    field[N] a = [0; N];
    return;
}